--- a/appInstalationConfig.plist
+++ b/appInstalationConfig.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>YOUR DOWNLOAD IPA FILE</string>
+					<string>https://github.com/gpneto/public/raw/main/babadoimagem.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
